# CRinMI-MR-24

./: .gitignore  LICENSE  README.md
crinmi_mr/: CMakeLists.txt  README.md  calibration.py  minus.py  package.xml  rotation_error.py  setup.py  workspace.yaml
crinmi_mr/config/: capture_pose1.npz  robot_ip.yaml  workspace.yaml  workspace_3.yaml
crinmi_mr/config/aruco/: capture_pose2.npz  capture_pose3_keti.npz
crinmi_mr/config/grip_matching/: match_grip.yaml
crinmi_mr/config/guide_matching/: match_pose.yaml
crinmi_mr/config/guide_pose/: guide_pose.yaml
crinmi_mr/config/robot_camera_calibration/: calibration1.json  calibration2.json  calibration3.json  calibrationsimulator.json
crinmi_mr/config/robot_pose/: robot_pose.yaml
crinmi_mr/launch/: 2d_convolution.launch  aruco.launch  assemble.launch  calibration.launch  catpure_pose.launch  ketinet.launch  pose.launch  realsense.launch  record.launch  segment.launch  server.launch  test.launch  tf_cam.launch
crinmi_mr/mesh/: a_bearing_holder.stl  a_cam_zig.stl  a_rod_end_bearing.STL  a_rod_end_bearing.stl  a_roller.STL  a_roller.stl  g_hex_wrench_y.STL  g_hex_wrench_y.stl
crinmi_mr/rviz/: rviz.rviz
crinmi_mr/scripts/: 2d_convolution_node.py  aruco_test_node.py  assembly_node.py  assembly_node_changed.py  calibration_node.py  capture_pose_test_node.py  keti_test_node.py  pose_test_node.py  record_node.py  ros_node.py  segment_test_node.py  test_node.py
crinmi_mr/scripts/2024_ketinet/: README.md  demo_ketinet.py
crinmi_mr/scripts/assemble_interface/: assemble_interface.py  check_pose.py  icp.py  (+2 more)
(+75 files in other folders)
